# backend/model/surveyors.go
@@ -1,6 +1,0 @@
-package model
-
-type Surveyor struct {
-	ID   string `json:"id" example:"000001"`
-	Name string `json:"name" example:"調査員1"`
-}
